# AutoSplit

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
