[tool.poetry]
name = "autosplit"
version = "0.1.0"
description = ""
authors = ["myyhlee <lyho1127@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.24.2"s
tqdm = "^4.65.0"
argparse = "^1.4.0"
soundfile = "^0.12.1"
torch = "^1.13.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
